[package]
name = "valo_screan_cap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
windows-capture = "1.0.68"
tokio = { version = "1.37.0", features = ["full"] }
aio_event = "0.1.0"
native-tls = "*"
futures-util = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
base64 = "*"